[tool.poetry]
name = "unicron"
version = "0.1.0"
description = ""
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
chispa = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
