[tool.poetry]
name = "unicron"
version = "0.1.0"
description = ""
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.0"
pyspark = ">=2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.2.2"
chispa = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
